[package]
name = "jwe-wasm"
version = "0.2.1"
authors = ["Ade Hery Shopyan <adeheryshopyan@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ring = { version = "0.17.8", features = ["wasm32_unknown_unknown_js"] }
biscuit = "0.7"
num-bigint = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-bindgen]
name = "jwe-wasm"
